2006-06-03  Daniel Stone  <daniel@freedesktop.org>

	* configure.ac:
	* hw/xfree86/os-support/bus/Pci.h:
	Add support for kFreeBSD systems.  (Robert Millan, Aurelien Jarno)

	* hw/xfree86/loader/loader.h:
	* hw/xfree86/loader/loader.c:
	Completely remove relocation pointer tables.

	* Xext/appgroup.c:
	Bug #6956: Fix crash when removing session leader before its children.
	(Rich Coe)

2006-06-01  Adam Jackson  <ajax@freedesktop.org>

	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/dixmods/Makefile.am:
	* hw/xfree86/dixmods/bitmapmod.c:
	Bug #5089: Die, libbitmap, die!

	* hw/xfree86/common/xf86Config.c:
	Add bitmap to the ignored module list.

2006-06-01  Daniel Stone  <daniel@freedesktop.org>

	* Xext/Makefile.am:
	* Xext/README.xtest1-ddx:
	* Xext/xtest1di.c:
	* Xext/xtest1dd.h:
	* Xext/xtest1dd.c:
	* Xprint/ddxInit.c:
	* hw/kdrive/src/kdrive.c:
	* hw/xfree86/common/xf86Events.c:
	* hw/xfree86/common/xf86Init.c:
	* hw/xfree86/os-support/solaris/sun_kbdEv.c:
	* hw/xnest/TestExt.c:
	* hw/xwin/InitInput.c:
	* hw/vfb/InitInput.c:
	* mi/miinitext.c:
	* os/WaitFor.c:
	Die, XTESTEXT1, die!

	* dix/devices.c:
	* include/input.h:
	* mi/mipointer.h:
	* mi/mipointer.c:
	Get rid of horrendous, somewhat misguided, DDX binary-compatibility
	glue.

	* hw/xfree86/common/xf86Config.c:
	* hw/xfree86/common/xf86Configure.c:
	* parser/Module.c:
	* parser/xf86Parser.c:
	Ignore requests to load deprecated GLcore and speedo modules
	(properly, this time).

	* configure.ac:
	* hw/xfree86/common/xf86Globals.c:
	* hw/xfree86/loader/Makefile.am:
	* hw/xfree86/loader/loader.c:
	* hw/xfree86/loader/loader.h:
	* hw/xfree86/loader/loadmod.c:
	* hw/xfree86/loader/ar.h:
	* hw/xfree86/loader/aout.h:
	* hw/xfree86/loader/aoutloader.h:
	* hw/xfree86/loader/aoutloader.c:
	* hw/xfree86/loader/coff.h:
	* hw/xfree86/loader/coffloader.h:
	* hw/xfree86/loader/coffloader.c:
	* hw/xfree86/loader/elf.h:
	* hw/xfree86/loader/elfloader.h:
	* hw/xfree86/loader/elfloader.c:
	* include/xorg-config.h.in: