@@ -94,7 +94,6 @@ BEGIN
 	POPUP "TRAYICON_MENU"
 	BEGIN
 		MENUITEM "&Hide Root Window", ID_APP_HIDE_ROOT
-		MENUITEM "Show Cursor", ID_APP_SHOWCURSOR
 		MENUITEM "&About...", ID_APP_ABOUT
 		MENUITEM SEPARATOR
 		MENUITEM "E&xit", ID_APP_EXIT
