@@ -1206,9 +1206,6 @@ winWindowProc (HWND hwnd, UINT message,
 	  /* Display Exit dialog */
 	  winDisplayExitDialog (s_pScreenPriv);
 	  return 0;
-	case ID_APP_SHOWCURSOR:
-	  winDebug("ShowCursor: %d\n", ShowCursor(TRUE));
-	  return 0;
 
 #ifdef XWIN_MULTIWINDOW
 	case ID_APP_HIDE_ROOT:
